opam-version: "2.0"
name: "gremlin"
version: "0.1.0"
author: "Bramford Horton <bram.horton@gmail.com>"
maintainer: "Bramford Horton <bram.horton@gmail.com>"
homepage: "https://github.com/bramford/ocaml-gremlin"
bug-reports: "https://github.com/bramford/ocaml-gremlin/issues"
dev-repo: "git+https://github.com/bramford/ocaml-gremlin"
doc: "https://bramford.github.io/ocaml-gremlin/doc"
license: "ISC"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.07.1"}
  "dune" {build & >= "1.10.0"}
  "lwt" {>= "4.2.1"}
  "containers" {>= "2.6"}
  "lwt_ppx" {>= "1.2.2"}
  "conduit-lwt-unix" {>= "1.4.0"}
  "yojson" {>= "1.7.0"}
  "core" {>= "0.12.3"}
  "ppx_let" {>= "0.12.0"}
]
synopsis: "Gremlin Client Library"
description: """
This is an Apache Tinkerpop3 Gremlin client library.

See the official tinkerpop3 and gremlin docs:
- http://tinkerpop.apache.org/docs/current/

This client library is implemented following the driver provider requirements:
- http://tinkerpop.apache.org/docs/current/dev/provider/#_graph_driver_provider_requirements
"""
